--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     <div class="container-fluid main-content">
       <div class="row">
 
-        <div>
+        <div class="col col-xs-12">
         <!--Main-->
-          <img src="./images/main/main_main.jpg" />
+          <img src="./images/main/main_main.jpg" class="img-fluid img-thumbnail" />
         </div>
 
         <div>
