--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container-fluid main-content">
       <div class="row">
 
-        <div class="col col-xs-12">
+        <div class="col col-xs-12 col-sm-6 col-md-8">
         <!--Main-->
           <img src="./images/main/main_main.jpg" class="img-fluid img-thumbnail" />
         </div>
