--- a/index.html
+++ b/index.html
@@ -81,14 +81,26 @@
     <div class="container-fluid main-content">
       <div class="row">
 
-        <div class="col col-xs-12 col-sm-6 col-md-8">
+        <div class="col-xs-12 col-sm-6">
         <!--Main-->
-          <img src="./images/main/main_main.jpg" class="img-fluid img-thumbnail" />
+          <img src="./images/main/main_main.jpg" class="img-fluid img-thumbnail" />  
           
         </div>
+      </div>
+
 
         <div>
         <!--Side Menu-->
+        <h3>LATEST HEADLINES</h3>
+          <ul>
+            <li>Harriet Harman: The New Law on Gender Pay was Labour's</li>
+            <li>French Court Will Hear Facebook Nude Painting Case</li>
+            <li>Rolf Harris Faces Seven Indecent Assault Charges</li>
+            <li>U.K. Airbnb Host Rejects Israeli for 'Occupying Lands'</li>
+            <li>Indonesia Blocking Gay Emojis From Facebook, Whatsapp</li>
+            <li>Mourinho and Woodward 'Cannot Have Spoken' - Van Gaal</li>
+            <li>Rwanda to Relocate Burundian Refugees</li>
+          </ul>
         </div>
 
       </div>
