--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
         <!--Main-->
           <img src="./images/main/main_main.jpg" class="img-fluid img-thumbnail" />  
           <p>U.S.</p>
-          <a>JUSTICE DEPT. TO FORCE REFORMS</a>
+          <a href="#top">JUSTICE DEPT. TO FORCE REFORMS</a>
           <p>"The residents of Ferguson have waited nearly a year for their city to adopt an agreement."</p>
           <div class="row">
             <article class="col-xs-12 col-sm-6">
               <img src="./images/main/main1.png" class="img-fluid img-thumbnail" />  
               <p>U.S.</p>
-              <a>GRAVITATIONAL WAVES DETECTED, PROVING EINSTEIN RIGHT</a>
+              <a href="#top">GRAVITATIONAL WAVES DETECTED, PROVING EINSTEIN RIGHT</a>
               <p>"This [was] truly a scientific moon shot, and we landed on the moon."</p>
             </article>
 
             <article class="col-xs-12 col-sm-6">
               <img src="./images/main/main2.jpg" class="img-fluid img-thumbnail" />  
               <p>SPONSOR INSIGHT</p>
-              <a>THE BEST UNIVERSITIES OF ASIA</a>
+              <a href="#top">THE BEST UNIVERSITIES OF ASIA</a>
               <p>"Universities from Asia and Europe are challenging the best schools in the USA. When it comes to choosing the right school then, the options have never been more diverse…"</p>
             </article>
           </div>
