--- a/index.html
+++ b/index.html
@@ -105,20 +105,20 @@
         </div>
       </div>
 
-
-        <div class="col-md-4">
-        <!--Side Menu-->
-        <h3>LATEST HEADLINES</h3>
-          <ul>
-            <li>Harriet Harman: The New Law on Gender Pay was Labour's</li>
-            <li>French Court Will Hear Facebook Nude Painting Case</li>
-            <li>Rolf Harris Faces Seven Indecent Assault Charges</li>
-            <li>U.K. Airbnb Host Rejects Israeli for 'Occupying Lands'</li>
-            <li>Indonesia Blocking Gay Emojis From Facebook, Whatsapp</li>
-            <li>Mourinho and Woodward 'Cannot Have Spoken' - Van Gaal</li>
-            <li>Rwanda to Relocate Burundian Refugees</li>
-          </ul>
-        </div>
+      <div class="col-md-4">
+      <!--Side Menu-->
+      <h3>LATEST HEADLINES</h3>
+        <ul>
+          <li>Harriet Harman: The New Law on Gender Pay was Labour's</li>
+          <li>French Court Will Hear Facebook Nude Painting Case</li>
+          <li>Rolf Harris Faces Seven Indecent Assault Charges</li>
+          <li>U.K. Airbnb Host Rejects Israeli for 'Occupying Lands'</li>
+          <li>Indonesia Blocking Gay Emojis From Facebook, Whatsapp</li>
+          <li>Mourinho and Woodward 'Cannot Have Spoken' - Van Gaal</li>
+          <li>Rwanda to Relocate Burundian Refugees</li>
+        </ul>
+        <button>See All Headlines</button>
+      </div>
 
       </div>
     </div>
