--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- Head -->
   <head>
     <title>Newsweek</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/navbar.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
