--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-xs-12 col-md-3">
       <!--Side Menu-->
       <h3>LATEST HEADLINES</h3>
         <ul>
