--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         <div class="side-menu">
           <h3>LATEST HEADLINES</h3>
             <ul>
-              <li>Harriet Harman: The New Law on Gender Pay was Labour's</li>
-              <li>French Court Will Hear Facebook Nude Painting Case</li>
-              <li>Rolf Harris Faces Seven Indecent Assault Charges</li>
-              <li>U.K. Airbnb Host Rejects Israeli for 'Occupying Lands'</li>
-              <li>Indonesia Blocking Gay Emojis From Facebook, Whatsapp</li>
-              <li>Mourinho and Woodward 'Cannot Have Spoken' - Van Gaal</li>
-              <li>Rwanda to Relocate Burundian Refugees</li>
+              <li class="list">Harriet Harman: The New Law on Gender Pay was Labour's</li>
+              <li class="list">French Court Will Hear Facebook Nude Painting Case</li>
+              <li class="list">Rolf Harris Faces Seven Indecent Assault Charges</li>
+              <li class="list">U.K. Airbnb Host Rejects Israeli for 'Occupying Lands'</li>
+              <li class="list">Indonesia Blocking Gay Emojis From Facebook, Whatsapp</li>
+              <li class="list">Mourinho and Woodward 'Cannot Have Spoken' - Van Gaal</li>
+              <li class="list">Rwanda to Relocate Burundian Refugees</li>
             </ul>
             <button>See All Headlines</button>
         </div>
