--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <li class="list">Mourinho and Woodward 'Cannot Have Spoken' - Van Gaal</li>
               <li class="list">Rwanda to Relocate Burundian Refugees</li>
             </ul>
-            <button>See All Headlines</button>
+            <button class="button">See All Headlines</button>
         </div>
       </div>
 
